--- a/sample/androidSample/src/main/res/values/strings.xml
+++ b/sample/androidSample/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Android Sample</string>
+    <string name="app_name">Form Validation Sample</string>
 </resources>
